fixed showing message on mobiles

--- a/custom/styles/custom.css
+++ b/custom/styles/custom.css
@@ -43,7 +43,7 @@
     transform: translate(-50%, -50%);
     text-transform: center;
     font-size: 12px;
-    display: none;
+    display: block;
 }
 
 .page-wrapper {
